# Gysin-IA

./: .gitignore  README.md  lista_arquivos_python.txt  memoria.json  pyproject.toml  requirements.txt  run.py  setup.py
config/: config.py
core/: chatgpt_integration.py  memoria.py  mental_map_generator.py
core/language_model/: modelo_linguagem.py
interface/: interface_usuario.py
tests/: conftest.py  test_chatgpt_integration.py  test_integracao.py  test_interface_usuario.py  test_modelo_linguagem.py
utils/: exceptions.py  logger.py
